<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Avaliação de Serviços</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_entrar">Entrar</string>
    <string name="img_user">Usuário</string>
    <string name="img_senha">Senha</string>
    <string name="img_logo">Projeto Integrador</string>
    <string name="title_activity_pergunta1"></string>
    <string name="pergunta_um_lbl"></string>
    <string name="radio_sim">Sim</string>
    <string name="radio_nao">Não</string>
    <string name="btn_prox_pergunta">Próxima Pergunta</string>
    <string name="title_activity_informacoes_usuario"></string>
    <string name="lbl_info_user">Informações do Usuário</string>
    <string name="btn_responder_questionario">Responder Questionario</string>
    <string name="lbl_lorem_ipsum">A TERTEUS é uma empresa de Desenvolvimento de Software fundada por alunos universitários da Faculdade Cenecista de Sete Lagoas. O aplicativo aqui desenvolvido tem como objetivo a avaliação de prestação de serviços de empresas. A Terteus visa ser reconhecida como uma empresa em excelência no desenvolvimento de softwares, alcançando satisfação de nossos clientes. Tendo como missão o propósito de desenvolver softwares e prestar serviços com qualidade. Temos como principais valores: éticos,  qualidade, inovação, o prazer em servir nossos clientes e a criatividade. 
"Sua empresa bem atendida é a nossa maior satisfação."</string>
    <string name="btn_proxima">Próxima</string>
    <string name="btn_anterior">Anterior</string>
    <string name="lbl_contador"></string>
    <string name="title_activity_tela_sugestoes"></string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_tela_sugestao"></string>
    <string name="lbl_sugestao_title">Deixe uma sugestão ou reclamação</string>
    <string name="label_linha"></string>
    <string name="title_activity_tela_final"></string>
    <string name="lbl_agradecimento">"Obrigado por ter respondido nosso questionário. Entraremos em contato se necessário."</string>
    <string name="btn_enviar_respostas">Enviar Respostas</string>
    <string name="btnAvancar2">Avançar</string>
    <string name="btnVoltar2">Anterior</string>
    <string name="testepergunta">Como você avalia a prestação de serviços da Faculdade Cenecista de Sete Lagoas</string>

</resources>