<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00afef"
    android:importantForAccessibility="auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context=".Pergunta1Activity" >

    <TextView
        android:id="@+id/textoPergunta"
        style="@style/cabecalho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/pergunta_um_lbl" />

    <CheckBox
        android:id="@+id/checkBox1"
        style="@style/textoAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textoPergunta"
        android:background="#FFF"
        android:checked="true"
        android:height="65dp"
        android:importantForAccessibility="yes"
        android:minHeight="65dp"
        android:paddingLeft="35dp"
        android:text="@string/radio_sim"
        android:textAlignment="center" />

    <CheckBox
        android:id="@+id/checkBox2"
        style="@style/fonteBrancaVerdana20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBox1"
        android:background="#00afef"
        android:ellipsize="end"
        android:focusableInTouchMode="true"
        android:height="65dp"
        android:minHeight="65dp"
        android:paddingLeft="35dp"
        android:text="@string/radio_nao"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/btnProxima"
        style="@style/fonteBrancaVerdana20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/checkBox2"
        android:background="#fff"
        android:height="65dp"
        android:minHeight="65dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:text="@string/btn_prox_pergunta"
        android:textColor="#00afef" />

</RelativeLayout>