<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3a3a3a"
    android:columnCount="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView2"
        android:layout_below="@+id/imageView2"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/img_logo"
        android:src="@drawable/icone_senha" />

    <EditText
        android:id="@+id/editUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:background="#3b4148"
        android:inputType="text"
        android:paddingLeft="5dp"
        android:textColor="#FFF" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView3"
        android:layout_alignLeft="@+id/editUsuario"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/imageView3"
        android:background="#3b4148"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingLeft="5dp"
        android:textColor="#FFF" />

    <Button
        android:id="@+id/btnProxima"
        style="@style/buttonAzul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/imageView3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView3"
        android:onClick="abrirQuestionario"
        android:text="@string/btn_entrar" />

    <ImageView
        android:id="@+id/imagemLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/img_senha"
        android:src="@drawable/logo" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imagemLogo"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/img_user"
        android:src="@drawable/icone_usurio" />

</RelativeLayout>